Updated Bootstrap stylesheet

--- a/frontend.html
+++ b/frontend.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>CS:GO Inspect Parser</title>
 
-  <link rel="stylesheet" href="https://bootswatch.com/flatly/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/latest/flatly/bootstrap.min.css">
 
   <style>
     .container {
