--- a/frontend.html
+++ b/frontend.html
@@ -39,7 +39,7 @@
             return $('.lbl-response').html(response.message);
           }
           var iteminfo = JSON.parse(response.message).iteminfo;
-          return $('.lbl-response').html('Float: ' + iteminfo.floatvalue + ' - Paint Index: ' + iteminfo.paintindex);
+          return $('.lbl-response').html('Float Value: ' + iteminfo.floatvalue + ' - Pattern Index: ' + iteminfo.paintseed);
         });
       }
     });
